@@ -432,6 +432,11 @@
                min_length="3"
                validator="password"
                required="true"/>
+        <field name="note"
+               description="[NOTE]"
+               widget="textarea"
+               validator="text"
+               max_length="4096"/>
         <field name="continue"
                description="[CONTINUE]"
                widget="submit"
